added link to my rmt-acquisitoin app

--- a/bio.html
+++ b/bio.html
@@ -9,7 +9,7 @@
 <body>
 <h1>About me</h1>
 <p>
-	Graduated with degrees in physics and applied math from Berkeley in May 2017. Currently an intern at Lawrence Berkeley Lab, Geophysics Department, developing an application for the <a href="https://redpitaya.com">red pitaya acquisition board</a> for <a href="https://en.wikipedia.org/wiki/Magnetotellurics">radio magnetotelluric</a> measurements.
+	Graduated with degrees in physics and applied math from Berkeley in May 2017. Currently an intern at Lawrence Berkeley Lab, Geophysics Department, developing an <a href="https://github.com/hunterakins/RMT-Acquisition">application</a> for the <a href="https://redpitaya.com">red pitaya acquisition board</a> for <a href="https://en.wikipedia.org/wiki/Magnetotellurics">radio magnetotelluric</a> measurements.
 <br>
 	In my spare time, I juggle some different hobbies and interests. Lately I've been riding my bike, salsa dancing, and working on <a href=https://github.com/hunterakins/drum64>drum64</a> with my friend Mike. 
 <br>
