--- a/bio.html
+++ b/bio.html
@@ -13,7 +13,7 @@
 <br>
 	In my spare time, I juggle some different hobbies and interests. Lately I've been riding my bike, salsa dancing, and working on <a href=https://github.com/hunterakins/drum64>drum64</a> with my friend <a href="http://mikeyzhong.com/">Mike</a>. 
 <br>
-	Academically, I'm interested in physical computing, control theory, signal processing, and remote sensing, particularly with applications to groundwater.   
+	Academically, I'm interested in physical computing, control theory, signal processing, and remote sensing, particularly with applications to geophysics.   
 </p>
 </body>
 
