--- a/bio.html
+++ b/bio.html
@@ -9,12 +9,9 @@
 <body>
 <h1>About me</h1>
 <p>
-	Graduated with degrees in physics and applied math from Berkeley in May 2017. Currently an intern at Lawrence Berkeley Lab, Geophysics Department, developing an <a href="https://github.com/hunterakins/RMT-Acquisition">application</a> for the <a href="https://redpitaya.com">red pitaya acquisition board</a> for <a href="https://en.wikipedia.org/wiki/Magnetotellurics">radio magnetotelluric</a> measurements.
+I live in San Diego. 
+You can see my publications on my <a href="https://scholar.google.com/citations?user=26FpTL8AAAAJ&hl=en">google scholar profile</a>.
 <br>
-	In my spare time, I juggle some different hobbies and interests. Lately I've been riding my bike, salsa dancing, and working on <a href=https://github.com/hunterakins/drum64>drum64</a> with my friend <a href="http://mikeyzhong.com/">Mike</a>. 
-<br>
-	Academically, I'm interested in physical computing, control theory, signal processing, and remote sensing, particularly with applications to geophysics.   
-</p>
 </body>
 
 </html>
