--- a/bio.html
+++ b/bio.html
@@ -9,8 +9,15 @@
 <body>
 <h1>About me</h1>
 <p>
-I live in San Diego. 
-You can see my publications on my <a href="https://scholar.google.com/citations?user=26FpTL8AAAAJ&hl=en">google scholar profile</a>.
+I live in San Diego. <br> <br>
+You can see my publications on my <a href="https://scholar.google.com/citations?user=26FpTL8AAAAJ&hl=en">google scholar profile</a>. <br> <br>
+I have a few projects on Github that may be useful: <br>
+<br>
+x  <a href="https://github.com/hunterakins/pynm">pynm</a> - a Python code for numerically solving the acoustic wave equation in a cylindrically symmetric layered fluid waveguide. 
+<br>
+x  <a href="https://github.com/hunterakins/pyat">pyat</a> - a Python interface for the <a href="http://oalib.hlsresearch.com/AcousticsToolbox/">Acoustics Toolbox</a>.
+<br>
+x  <a href="https://github.com/hunterakins/samplers">samplers</a> - Python implementations of a number of Markov Chain Monte Carlo samplers.
 <br>
 </body>
 
