added trans d link

--- a/bio.html
+++ b/bio.html
@@ -21,4 +21,6 @@ x  <a href="https://github.com/hunterakins/samplers">samplers</a> - Python imple
 <br>
 </body>
 
+I am working on a tutorial for trans-dimensional MCMC. You can see a draft of it <a href="trans_d.pdf">here</a>. 
+
 </html>
