:updated bio with more description of samplers

--- a/bio.html
+++ b/bio.html
@@ -17,7 +17,7 @@ x  <a href="https://github.com/hunterakins/pykrak">pykrak</a> - a Python code fo
 <br>
 x  <a href="https://github.com/hunterakins/pyat">pyat</a> - a Python interface for the <a href="http://oalib.hlsresearch.com/AcousticsToolbox/">Acoustics Toolbox</a>.
 <br>
-x  <a href="https://github.com/hunterakins/samplers">samplers</a> - Python implementations of a number of Markov Chain Monte Carlo samplers.
+x  <a href="https://github.com/hunterakins/samplers">samplers</a> - Python implementations of a number of Markov Chain Monte Carlo samplers. Includes adaptive proposal covariance matrix estimation and reverse jump MCMC with parallel tempering for polynomial regression as well as a change-point problem.
 <br>
 </body>
 
