update sccholar profile link

--- a/bio.html
+++ b/bio.html
@@ -10,7 +10,7 @@
 <h1>About me</h1>
 <p>
 I live in San Diego. <br> <br>
-You can see my publications on my <a href="https://scholar.google.com/citations?user=26FpTL8AAAAJ&hl=en">google scholar profile</a>. <br> <br>
+You can see my publications on my <a href="https://scholar.google.com/citations?hl=en&authuser=1&user=8nbRXMoAAAAJ">google scholar profile</a>. <br> <br>
 I have a few projects on Github that may be useful: <br>
 <br>
 x  <a href="https://github.com/hunterakins/pykrak">pykrak</a> - a Python code for numerically solving the acoustic wave equation in a cylindrically symmetric layered fluid waveguide. 
